[gd_scene load_steps=15 format=3 uid="uid://dawyr8yokumsj"]

[ext_resource type="Script" path="res://Main.gd" id="1_l2c8v"]
[ext_resource type="Texture2D" uid="uid://bqxckhjfuncey" path="res://Sprites/ButtonMask.png" id="2_2rfux"]
[ext_resource type="Texture2D" uid="uid://dppysswgwdjvv" path="res://Sprites/Insom.png" id="2_aldxt"]
[ext_resource type="AudioStream" uid="uid://cgdf2186impnu" path="res://Sounds/pickup.wav" id="2_h7bq4"]
[ext_resource type="AudioStream" uid="uid://dcvsncru7mxlq" path="res://Sounds/button.wav" id="3_m85vd"]
[ext_resource type="Texture2D" uid="uid://df4yhvml8cy7i" path="res://Sprites/LunSquad.png" id="4_8fp36"]
[ext_resource type="AudioStream" uid="uid://c7h4age2efb7m" path="res://Sounds/blipSelect.wav" id="4_qrp6k"]
[ext_resource type="Texture2D" uid="uid://i8lcmmxesdt1" path="res://Sprites/moist.png" id="5_2d6v5"]
[ext_resource type="AudioStream" uid="uid://dt2y82ef0fmnd" path="res://Sounds/levelUp.wav" id="5_40jxx"]
[ext_resource type="Texture2D" uid="uid://cvvrotvax0x74" path="res://Sprites/gamer.png" id="6_a8441"]
[ext_resource type="Texture2D" uid="uid://c7wlq4bt5lu6v" path="res://Sprites/shark.png" id="7_oc0v3"]
[ext_resource type="Texture2D" uid="uid://diq6dyecgdqfr" path="res://Sprites/cat.png" id="8_hhr8y"]
[ext_resource type="Texture2D" uid="uid://v00p1fr4vny" path="res://Sprites/green.png" id="9_66vgm"]
[ext_resource type="Texture2D" uid="uid://dal0pljc5gqld" path="res://Sprites/viIcon.png" id="10_uiwe1"]

[node name="Main" type="Control" groups=["Main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2c8v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.517647, 0.521569, 1)

[node name="top_UI" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 97.0
grow_horizontal = 2

[node name="dollar_UI" type="Label" parent="top_UI"]
modulate = Color(0.796078, 0.756863, 0.309804, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Dollars : $5
"

[node name="Spacer" type="Control" parent="top_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="scoreBox" type="VBoxContainer" parent="top_UI"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="top_UI/scoreBox"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.819608, 0, 0.309804, 1)

[node name="scoreNeeded" type="Label" parent="top_UI/scoreBox/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Score Needed: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="top_UI/scoreBox"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.278431, 0.427451, 0.756863, 1)

[node name="scoreCurrent" type="Label" parent="top_UI/scoreBox/ColorRect2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Current Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="top_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="timerLabel" type="Label" parent="top_UI/Spacer2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
grow_horizontal = 0
grow_vertical = 2
horizontal_alignment = 2
autowrap_mode = 1

[node name="timer" type="Timer" parent="top_UI/Spacer2"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="turnButton" type="Button" parent="top_UI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Next Turn
"

[node name="Shop" type="HBoxContainer" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -40.0
offset_right = 440.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="bottom_UI" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -97.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="levelButton" type="Button" parent="bottom_UI"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Level Up!"

[node name="Spacer2" type="Control" parent="bottom_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="rerollButton" type="Button" parent="bottom_UI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Refresh
"

[node name="Spacer3" type="Control" parent="bottom_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer4" type="Control" parent="bottom_UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="VBoxContainer" parent="bottom_UI/Spacer4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.657143
anchor_right = 1.0449
anchor_bottom = 1.03896
offset_left = 45.0
offset_right = 440.0
offset_bottom = 80.0
scale = Vector2(0.65, 0.65)
metadata/_edit_use_anchors_ = true

[node name="iconContainer" type="HBoxContainer" parent="bottom_UI/Spacer4/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="insomIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/insomIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_aldxt")

[node name="lunaIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/lunaIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_8fp36")

[node name="moistIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/moistIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_2d6v5")

[node name="gamerIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/gamerIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_a8441")

[node name="sharkIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/sharkIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_oc0v3")

[node name="catIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/catIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_hhr8y")

[node name="greenIcon" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/greenIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_66vgm")

[node name="greenIcon2" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer"]
clip_children = 1
layout_mode = 2
texture = ExtResource("2_2rfux")

[node name="TextureRect" type="TextureRect" parent="bottom_UI/Spacer4/HBoxContainer/iconContainer/greenIcon2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("10_uiwe1")

[node name="textContainer" type="HBoxContainer" parent="bottom_UI/Spacer4/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="insomLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 34
text = "0/11"
horizontal_alignment = 1

[node name="lunarLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/6"
horizontal_alignment = 1

[node name="moistLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/8"
horizontal_alignment = 1

[node name="gamerLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/6"
horizontal_alignment = 1

[node name="sharkLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/2"
horizontal_alignment = 1

[node name="catLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/4"
horizontal_alignment = 1

[node name="greenLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/4"
horizontal_alignment = 1

[node name="viLabel" type="Label" parent="bottom_UI/Spacer4/HBoxContainer/textContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0/3"
horizontal_alignment = 1

[node name="deathParent" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pickUpSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_h7bq4")
volume_db = -10.0

[node name="buttonSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m85vd")
volume_db = -5.0

[node name="meepSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qrp6k")
volume_db = -15.0
pitch_scale = 0.75

[node name="levelSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_40jxx")
volume_db = -15.0

[node name="levelText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.107
anchor_top = 0.794
anchor_right = 0.107
anchor_bottom = 0.857
offset_left = -113.96
offset_top = 0.320007
offset_right = 121.04
offset_bottom = -0.0400391
grow_vertical = 0
theme_override_font_sizes/font_size = 33
text = "Level: 1"
vertical_alignment = 1

[connection signal="timeout" from="top_UI/Spacer2/timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="top_UI/turnButton" to="." method="_on_turn_button_button_down"]
[connection signal="button_down" from="bottom_UI/levelButton" to="." method="_on_level_button_button_down"]
[connection signal="button_down" from="bottom_UI/rerollButton" to="." method="_on_reroll_button_button_down"]
